# Quran-Player

./: Makefile  README.md  archive_reciter_tool.py  constants.js  custom-reciters.json  extension copy 2.js  extension copy 3.js  extension.js  juz.json  meson.build  meson_post_install.py  metadata.json  prefs.js  stylesheet.css  surahs.json
locale/ar/LC_MESSAGES/: quran-player.mo  quran-player@faymaz.github.com.mo
locale/de/LC_MESSAGES/: quran-player.mo  quran-player@faymaz.github.com.mo
locale/en/LC_MESSAGES/: quran-player.mo  quran-player@faymaz.github.com.mo
locale/tr/LC_MESSAGES/: quran-player.mo  quran-player@faymaz.github.com.mo
po/: LINGUAS  quran-player.pot
po/ar/: ar.po
po/de/: de.po
po/en/: en.po
po/tr/: tr.po  tr.po~
schemas/: gschemas.compiled  org.gnome.shell.extensions.quran-player.gschema.xml
